<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="40dp"
    android:paddingTop="50dp"
    android:paddingRight="40dp"
    android:paddingBottom="50dp"
    android:id="@+id/admin_browse_events"
    tools:context=".AttendeeHome">

    <include layout="@layout/admin_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/admin_browse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Browse Events"
            android:textSize="32dp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="60dp"
            android:paddingBottom="10dp"
            tools:layout_editor_absoluteX="0dp">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_event_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                tools:listitem="@layout/admin_event_list" />
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>


</FrameLayout>