<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_browse_images"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="40dp"
    android:paddingTop="50dp"
    android:paddingRight="40dp"
...
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="70dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_img_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingTop="15dp"
                app:spanCount="3"
                tools:listitem="@layout/adm_img_item">
...
