<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingLeft="40dp"
    android:paddingTop="50dp"
    android:paddingRight="40dp"
    android:paddingBottom="50dp"
    tools:context=".Profile"
    android:id="@+id/attendee_profile_page"
    >


    <include
        android:id="@+id/include"
        layout="@layout/profilepage">

    </include>

    <include
        layout="@layout/attendee_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

